SERVER-33718 Explain does not produce a plan for mongoS-only aggregation pipelines